feat(): add menu in component main and it is not compelete

--- a/src/presentation/app/clients/main/main.component.html
+++ b/src/presentation/app/clients/main/main.component.html
@@ -1,7 +1,6 @@
-<nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
+<nav class="font-nav">
+    <div class="container-flex-reverse-row content-center">
+            <div class="col-md-4 ml-auto">
                 <ul>
                     <li><a href="#">مستندات</a></li>
                     <li><a href="#">بلاگ</a></li>
@@ -9,15 +8,20 @@
                 </ul>
             </div>
             <div class="col-md-4">
-                <a href=""><img src="../../../assets/images/logo.png" alt=""></a>
+                <a href="">
+                    <img class="logo" src="presentation/assets/images/logo.png" alt="">
+                </a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mr-auto">
                 <ul>
                     <li><a href="#">دموی رایگان</a></li>
                     <li><a href="#">ورود</a> / <a href="#">عضویت</a></li>
-                    <li><a href="#">icons</a></li>
+                    <li><a href="#"></a></li>
                 </ul>
             </div>
         </div>
-    </div>
 </nav>
+
+<header>
+
+</header>
