feat(): add vazir font and add header landing page

--- a/src/presentation/app/clients/main/main.component.html
+++ b/src/presentation/app/clients/main/main.component.html
@@ -1,5 +1,5 @@
 <nav class="font-nav">
-    <div class="container-flex-reverse-row content-center">
+    <div class="container-flex-row content-center">
             <div class="col-md-4 ml-auto">
                 <ul>
                     <li><a href="#">مستندات</a></li>
@@ -22,6 +22,22 @@
         </div>
 </nav>
 
-<header>
-
+<header class="p-153">
+    <div class="container-flex-reverse-row">
+        <div class="image-header">
+            <img src="presentation/assets/images/image-header.png" alt="">
+        </div>
+        <div class="description-header">
+            <div class="container-flex-column">
+                <span>بهینه‌سازی سامانه‌</span>
+                <span class="gradient-text-header">با خدمات رومان...</span>
+                <span class="more-detail-header">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته ...</span>
+                <div class="container-flex-row mt-35">
+                    <a href="#" class="redius-button-fill">ثبت نام</a>
+                    <a href="#" class="redius-button-out-fill">قیمت ها</a>
+                </div>
+                <span class="notic-header">* لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</span>
+            </div>
+        </div>
+    </div>
 </header>
