--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,14 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+@font-face
+{
+    font-family: Vazir;
+    src: url('presentation/assets/fonts/Vazir-Medium.ttf');
+}
+
+body
+{
+	font-family: Vazir;
+}
