--- a/src/presentation/app/clients/main/main.component.scss
+++ b/src/presentation/app/clients/main/main.component.scss
@@ -49,6 +49,7 @@ nav
 .logo {
     width: 80px;
     height: 37.6px;
+    margin-top: 10px;
 }
 a 
 {
@@ -63,4 +64,91 @@ nav
 ul li
 {
     display: inline;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+header
+{
+    width: 100%;
+    height: 869.99px;
+    background: url('../../../assets/images/background-header.png'), #0B100F;
+    background-size: 90%;
+    background-repeat: no-repeat;
+    max-width: 100%;
+    min-width: 100%;
+}
+.image-header img
+{
+    width: 808px;
+    height: 487px;
+}
+.p-153
+{
+    padding: 153px;
+}
+
+.description-header span:first-child
+{
+    font-size: 30px;
+    font-weight: 500;
+    color: #fff;
+}
+
+.gradient-text-header
+{
+    background: linear-gradient(270deg, #00DFA2 0%, #F6FA70 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 700;
+    font-size: 50px;
+    margin-top: 15px;
+}
+
+.more-detail-header
+{
+    color: rgba(130, 153, 147, 1);
+    font-weight: 400;
+    font-size: 16px;
+    text-align: right;
+    line-height: 27.86px;
+    margin-top: 35px;
+
+}
+.redius-button-fill
+{
+    font-size: 24.53px;
+    color: rgba(11, 16, 15, 1);
+    text-align: center;
+    font-weight: 500;
+    border-radius: 20px;
+    background: rgba(0, 223, 162, 1);
+    width: 122px;
+    height: 30px;
+    padding: 10px;
+}
+.redius-button-out-fill
+{
+    font-size: 24.53px;
+    color: rgba(11, 16, 15, 1);
+    text-align: center;
+    font-weight: 500;
+    border-radius: 20px;
+    border: 1px solid rgba(0, 223, 162, 1);
+    width: 122px;
+    height: 30px;
+    padding: 10px;
+    color: rgba(0, 223, 162, 1);
+    margin-right: 15px;
+}
+.notic-header
+{
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(246, 250, 112, 1);
+    margin-top: 10px;
+}
+
+.mt-35
+{
+    margin-top: 35px;
 }
