fix(): some change style header

--- a/src/presentation/app/clients/main/main.component.html
+++ b/src/presentation/app/clients/main/main.component.html
@@ -22,13 +22,10 @@
         </div>
 </nav>
 
-<header class="p-153">
-    <div class="container-flex-reverse-row">
-        <div class="image-header">
-            <img src="presentation/assets/images/image-header.png" alt="">
-        </div>
+<header>
+    <div class="container-flex-row">
         <div class="description-header">
-            <div class="container-flex-column">
+            <div class="container-flex-column position-text-header">
                 <span>بهینه‌سازی سامانه‌</span>
                 <span class="gradient-text-header">با خدمات رومان...</span>
                 <span class="more-detail-header">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته ...</span>
@@ -38,6 +35,9 @@
                 </div>
                 <span class="notic-header">* لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</span>
             </div>
+        </div>
+        <div class="image-header position-image-header">
+            <img src="presentation/assets/images/image-header.png" alt="">
         </div>
     </div>
 </header>
